<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_login">

    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtUsuarioLogin" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:hint="@string/UsuarLogin"/>
    <ImageView
            android:layout_width="131dp"
            android:layout_height="117dp" app:srcCompat="@drawable/mantenimientos"
            android:id="@+id/imageView" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/inicio_session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnIniciarSesion"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/h"/>
    <TextView
            android:text="@string/RegístrateLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblRegistrate" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion"
            app:layout_constraintStart_toEndOf="@+id/textView23" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/lblRegistrate" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:text="@string/ctaLogin"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/h" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtUsuarioLogin" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/contraseña"/>
</android.support.constraint.ConstraintLayout>