<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registro">

    <TextView
            android:text="@string/regUsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"/>
    <TextView
            android:text="@string/nomb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            app:layout_constraintEnd_toStartOf="@+id/txtNombre5"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/textView8"/>
    <TextView
            android:text="@string/ape"
            android:layout_width="72dp"
            android:layout_height="34dp"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp" android:layout_marginStart="80dp"
            app:layout_constraintEnd_toStartOf="@+id/txtApellido"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintBottom_toTopOf="@+id/textView9" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/pais"
            android:layout_width="35dp"
            android:layout_height="29dp"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="150dp" android:layout_marginStart="150dp"
            app:layout_constraintEnd_toStartOf="@+id/txtPais"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="@string/gen"
            android:layout_width="46dp"
            android:layout_height="21dp"
            android:id="@+id/textView15"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp" android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPais"
            app:layout_constraintEnd_toStartOf="@+id/txtGenero"
            app:layout_constraintBottom_toTopOf="@+id/textView16" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/cor"
            android:layout_width="57dp"
            android:layout_height="28dp"
            android:id="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toStartOf="@+id/txtCorreo5" android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textView17"/>
    <TextView
            android:text="@string/cont"
            android:layout_width="86dp"
            android:layout_height="23dp"
            android:id="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp" android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toStartOf="@+id/txtContraseña" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/confCont"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:id="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistroUsuario"
            app:layout_constraintEnd_toStartOf="@+id/txtConfirmarContraseña"
    />
    <Button
            android:text="@string/regbtn"
            android:layout_width="98dp"
            android:layout_height="48dp"
            android:id="@+id/btnRegistroUsuario"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.569" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txtConfirmarContraseña"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/txtApellido" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtApellido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre5" app:layout_constraintBottom_toTopOf="@+id/txtPais"
            android:layout_marginRight="70dp" android:layout_marginEnd="70dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtPais"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintTop_toBottomOf="@+id/txtApellido"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/txtGenero"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtGenero"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPais" app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintBottom_toTopOf="@+id/txtCorreo5" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCorreo5"
            app:layout_constraintTop_toBottomOf="@+id/txtGenero" app:layout_constraintStart_toEndOf="@+id/textView16"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintBottom_toTopOf="@+id/txtContraseña"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtConfirmarContraseña"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistroUsuario"
            app:layout_constraintTop_toBottomOf="@+id/txtContraseña" app:layout_constraintHorizontal_bias="1.0"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtContraseña" android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/textView17" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCorreo5"
            app:layout_constraintBottom_toTopOf="@+id/txtConfirmarContraseña"/>
</android.support.constraint.ConstraintLayout>