<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrincipalActivity"
        >
    <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnUsuario" android:background="@drawable/icon_user"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>
    <TextView
            android:text="@string/usuario"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/textView2"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnUsuario" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/pelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/btnPelicula"
            app:layout_constraintEnd_toStartOf="@+id/textView5" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"/>
    <TextView
            android:text="@string/serie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/btnSeries"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:id="@+id/btnPelicula" android:background="@drawable/icon_movie"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toStartOf="@+id/btnSeries"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.404" android:layout_marginTop="256dp"
            android:layout_marginBottom="256dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:id="@+id/btnSeries" android:background="@drawable/icon_tv"
            android:layout_marginTop="256dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/btnPelicula"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginBottom="256dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:layout_width="107dp"
            android:layout_height="121dp"
            android:id="@+id/btnRegU"
            android:background="@drawable/icon_sign_in"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.528" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/regU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:layout_marginEnd="178dp" android:layout_marginRight="178dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="175dp" android:layout_marginStart="175dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegU"
    />
</android.support.constraint.ConstraintLayout>