<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_dtSerie" android:scrollbars="horizontal|vertical"
        android:isScrollContainer="false">

    <com.androidnetworking.widget.ANImageView
            android:layout_height="219dp"
            android:layout_width="147dp"
            android:id="@+id/imgSerie"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView20"
            android:layout_marginEnd="5dp" android:layout_marginRight="5dp"
            app:layout_constraintHorizontal_bias="0.037" android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toTopOf="@+id/lblDescripcionSerie" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="28dp"
            android:id="@+id/lblNombreSerie"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" app:layout_constraintStart_toEndOf="@+id/imgSerie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/textView21"
    />
    <TextView
            android:layout_width="125dp"
            android:layout_height="28dp" android:id="@+id/lblFechaInicioSerie"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView21" app:layout_constraintStart_toEndOf="@+id/imgSerie"
            android:layout_marginLeft="9dp" android:layout_marginStart="9dp"
            app:layout_constraintBottom_toTopOf="@+id/textView22" app:layout_constraintHorizontal_bias="0.584"/>
    <TextView
            android:layout_width="104dp"
            android:layout_height="23dp" android:id="@+id/lblPaisSerie"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imgSerie" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/textView22"
            app:layout_constraintBottom_toTopOf="@+id/textView24"/>
    <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content" android:id="@+id/lblNetworkSerie"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            app:layout_constraintStart_toEndOf="@+id/imgSerie" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toTopOf="@+id/textView25"/>
    <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content" android:id="@+id/lblEstadoSerie"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp" app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/lblDescripcionSerie"/>
    <Button
            android:layout_width="68dp"
            android:layout_height="69dp"
            android:id="@+id/btnReproducirSerie"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/icon_movie"
            android:layout_marginBottom="100dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDescripcionSerie"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView20"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="150dp" android:layout_marginStart="150dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintHorizontal_bias="0.736"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintBottom_toTopOf="@+id/lblNombreSerie"/>
    <TextView
            android:text="@string/fechaInicio"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/lblNombreSerie"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toTopOf="@+id/lblFechaInicioSerie"/>
    <TextView
            android:text="@string/Pais"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView22" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="184dp"
            android:layout_marginStart="184dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lblFechaInicioSerie"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintBottom_toTopOf="@+id/lblPaisSerie"/>
    <TextView
            android:text="@string/regUsu"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView24" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lblPaisSerie"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintBottom_toTopOf="@+id/lblNetworkSerie"/>
    <TextView
            android:text="@string/Estado"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView25" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="184dp"
            android:layout_marginStart="184dp"
            app:layout_constraintTop_toBottomOf="@+id/lblNetworkSerie" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintBottom_toTopOf="@+id/lblEstadoSerie"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblDescripcionSerie" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/btnReproducirSerie"
            app:layout_constraintTop_toBottomOf="@+id/lblEstadoSerie" android:layout_marginTop="16dp"/>
    <TextView
            android:text="                "
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="30dp" android:layout_marginRight="30dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="61dp" android:layout_marginStart="61dp" android:id="@+id/textView14"/>
</android.support.constraint.ConstraintLayout>